--- a/Apis/com.libera.api/com.libera.api.csproj
+++ b/Apis/com.libera.api/com.libera.api.csproj
@@ -16,5 +16,9 @@
     <ProjectReference Include="..\..\Common\com.libera.services\com.libera.services.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="cd ../Application/libera/&#xD;&#xA;ng serve --port 9200 --open" />
+  </Target>
+
 
 </Project>
